k8s/03-phpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: flex-url
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin:5.2-apache
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "256Mi"
          requests:
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: flex-url
spec:
  selector:
    app: phpmyadmin
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
